feat: meta desc, share five

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Five</title>
+    <meta
+      name="description"
+      content="Foot Five est un organisateur de five 5 contre 5 avec possibilités de rajouter des remplaçants, de préciser le lieu et l'heure du five. "
+    />
   </head>
   <body data-theme="light">
     <div id="root"></div>
